Update index.html format changes

--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-<h2>This is my Client Side Scripting HTML page</h2>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>This is my Client Side Scripting HTML page!</title>
+        <!-- You may want to add other icon formats and sizes, but have this at the least: 
+        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="stylesheet" href="your.css"> -->
+        <style>
+        body {
+            background-color: pink;
+            font-family: Georgia, sans-serif;
+            padding: 50px;
+        }
+        h1 {
+            color: yellow;
+        }
+        </style>
+    </head>
+ 
+  <body>
+    <main>
+      <h1>Client Side Scripting</h1>
+      <h3>Kjrsten Holt</h3>
+      <h3>Fall Semester 2025</h3>
+
+      <ul>
+        <ol><a href="#">Future Assignment</a></ol>
+        <ol><a href="#">Another Future Assignment</a></ol>
+      </ul>
+    </main>
+    <!-- <script src="your.js"></script> -->
+    <noscript>
+      <!-- Optional, place it wherever it makes sense -->
+      JavaScript is not enabled.
+    </noscript>
+  
+</body>
+</html>
