--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!doctype html>
+<br>
+<br>
+<p> I added this sentence in the VS Code editor, and pushed it to my Github space.</p>
 <html lang="en">
     <head>
         <meta charset="utf-8">
