tried to add Calorie Counter

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="your.css"> -->
         <style>
         body {
-            background-color: pink;
+            background-color: green;
             font-family: Georgia, sans-serif;
             padding: 50px;
         }
@@ -30,7 +30,8 @@
 
       <ul>
         <ol><a href="#">Future Assignment</a></ol>
-        <ol><a href="#">Another Future Assignment</a></ol>
+        <ol><a href="#">Calorie Counter</a></ol>
+          <a href="">Calorie Counter</a>
       </ul>
     </main>
     <!-- <script src="your.js"></script> -->
